bugfix(challenge-checkpoints): Fixed checkpoints overlapping out of main container on challenge page

--- a/app/assets/stylesheets/challenge.scss
+++ b/app/assets/stylesheets/challenge.scss
@@ -87,15 +87,16 @@
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-row-gap: 15px;
-  grid-column-gap: 15px;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .grid-item {
   background-color: #DBDADB;
   border-radius: 25px;
-  padding: 10px 50px;
+  padding: 10px;
+  margin: 5px;
+  min-width: 150px;
+  text-align: center;
 }
